Create Win32 module and fix tests

--- a/ping-parser-attoparsec.cabal
+++ b/ping-parser-attoparsec.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Data.Attoparsec.Ping
+                     , Data.Attoparsec.Ping.Win32
   build-depends:       base >= 4.7 && < 5
                      , placeholders
                      , attoparsec
