--- a/ping-parser-attoparsec.cabal
+++ b/ping-parser-attoparsec.cabal
@@ -37,6 +37,7 @@ test-suite ping-parser-attoparsec-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       Spec.Win32
   build-depends:       base
                      , ping-parser-attoparsec
                      , hspec
